# rusty_rails

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: departure.rs  departure_board.rs  error.rs  main.rs
src/constants/: mod.rs
src/service/: mod.rs
