[package]
name = "rusty_rails"
version = "2.1.1"
edition = "2024"
license = "MIT"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
clearscreen = "4.0.2"
comfy-table = "7.2.1"
crossterm = "0.29.0"
dotenvy = "0.15.7"
once_cell = "1.21.3"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["time", "rt-multi-thread", "macros"] }

[features]
# Default: exit early if configuration invalid.
default = ["fail-fast-config"]
# Exit early on invalid configuration (used by validate_required_keys + get_board).
fail-fast-config = []
# Allow handling configuration errors at call sites (prefer try_get_board and skip early validation).
graceful-config = []
